--- a/htelehash.cabal
+++ b/htelehash.cabal
@@ -45,8 +45,8 @@ Library
   Buildable: False
   Exposed-modules:     TeleHash.TeleHash
                        TeleHash.Controller
-  ghc-options:         -Wall
-  --ghc-options:         -Wall -fhpc
+  --ghc-options:         -Wall
+  ghc-options:         -Wall -fhpc
 
 executable             main
     hs-source-dirs:    . src
