--- a/htelehash.cabal
+++ b/htelehash.cabal
@@ -33,14 +33,16 @@ Library
                    , attoparsec       >= 0.9.1   && < 1.0
                    , network          >= 2.3.0   && < 2.4
                    , random           >= 1.0     && < 2.0
-                   , SHA              >= 1.4.1   && < 1.5
-                   , thespian         >= 0.9     && < 1.0
+                   , SHA              >= 1.5.0   && < 1.9
+                   -- , thespian         >= 0.9     && < 1.0
                    , dataenc          >= 0.14    && < 0.15
                    , old-time         >= 1.0     && < 2.0
                    , MissingH         >= 1.1     && < 1.2
                    , transformers     >= 0.2.2   && < 0.3
-                   , json             >= 0.4.4   && < 0.5
+                   , json             >= 0.5     && < 1
                    , hslogger         >= 1.1.5   && < 2
+                   , yesod            >= 0.9.3   && < 1
+                   , syb              >= 0.3.3   && < 0.5
   hs-source-dirs: src
   Buildable: False
   Exposed-modules:     TeleHash.TeleHash
