--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@
 /TeleHash.Web.hs.html
 /logs/colortail.conf~
 /logs/htelehash-2011-10-21.msgs.log~
+/logs/htelehash-2011-10-21.log
+/logs/htelehash-2011-10-21.msgs.log
+/logs/startup_funny.txt
+/transcript-2011-10-16.txt
