Starting again, now I see movement on https://github.com/mnaamani/node-telehash

--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,23 @@
-/.ghci~
-/dist/
-/htelehash.cabal~
-/src/TeleHash/Controller.hs~
-/src/TeleHash/Demo.hs
-/src/TeleHash/Example.hs
-/src/TeleHash/Example.hs~
-/src/TeleHash/Play.hs
-/src/TeleHash/Play.hs~
-/src/TeleHash/irc.hs
-/src/TeleHash/irc.hs~
-/#runtests.hs#
-/.hpc/Main.mix
-/.hpc/TeleHash.Controller.mix
+*~
+/.dist-buildwrapper/
+/.hpc/
+//main.tix
 /Main.hs.html
 /TeleHash.Controller.hs.html
-/coverage.sh~
+/TeleHash.Web.hs.html
+/client_session_key.aes
+/dist/
 /hpc_index.html
 /hpc_index_alt.html
 /hpc_index_exp.html
 /hpc_index_fun.html
-/runtests.tix
-/.hpc/htelehash-0.0.1/TeleHash.Controller.mix
-/.hpc/htelehash-0.0.1/TeleHash.Json.mix
-/.hpc/htelehash-0.0.1/TeleHash.TeleHash.mix
-/main.hs~
-/main.tix
-/runcoverage.sh~
-/client_session_key.aes
-/src/TeleHash/Web.hs~
-/.hpc/TeleHash.Web.mix
-/TeleHash.Web.hs.html
-/logs/colortail.conf~
-/logs/htelehash-2011-10-21.msgs.log~
 /logs/htelehash-2011-10-21.log
 /logs/htelehash-2011-10-21.msgs.log
 /logs/startup_funny.txt
+/runtests.tix
+/src/TeleHash/Demo.hs
+/src/TeleHash/Example.hs
+/src/TeleHash/Play.hs
+/src/TeleHash/irc.hs
 /transcript-2011-10-16.txt
+
