--- a/htelehash.cabal
+++ b/htelehash.cabal
@@ -32,6 +32,7 @@ Library
                    , bytestring       >= 0.9.1   && < 1.0
                    , attoparsec       >= 0.9.1   && < 1.0
                    , network          >= 2.3.0   && < 2.4
+                   , network-info     >= 0.2.0   && < 0.3
                    , random           >= 1.0     && < 2.0
                    , SHA              >= 1.5.0   && < 1.9
                    , dataenc          >= 0.14    && < 0.15
