--- a/htelehash.cabal
+++ b/htelehash.cabal
@@ -43,7 +43,11 @@ Library
                    , yesod            >= 0.9.3   && < 1.5
                    , syb              >= 0.3.3   && < 0.5
                    , crypto-random
+                   , crypto-pubkey
+                   , crypto-pubkey-types
+                   , crypto-numbers
                    , base16-bytestring
+                   , base64-bytestring
                    , utf8-string
   hs-source-dirs: src
   Buildable: False
