--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@
 /src/TeleHash/Switch_flymake.hs
 /src/TeleHash/Controller_flymake_flymake.hs
 /src/TeleHash/Crypto1a_flymake.hs
+/src/TeleHash/Packet.hs.2014-04-06T11:44:07+0200
+/src/TeleHash/Packet.hs.2014-04-06T11:45:05+0200
