Starting to bring in Aeson for the JSON

--- a/htelehash.cabal
+++ b/htelehash.cabal
@@ -60,6 +60,7 @@ Library
                    , text
                    , scientific
                    -- , tls
+                   , vector
   hs-source-dirs: src
   Buildable: False
   Exposed-modules:
