--- a/htelehash.cabal
+++ b/htelehash.cabal
@@ -61,16 +61,21 @@ Library
                    , scientific
                    -- , tls
                    , vector
+                   , mvc
   hs-source-dirs: src
   Buildable: False
   Exposed-modules:
-                       -- TeleHash.TeleHash
-                       -- TeleHash.Controller
-                       TeleHash.Switch
-                       TeleHash.Utils
-                       TeleHash.Crypto1a
-                       TeleHash.Packet
-                       -- TeleHash.Web
+                       -- TeleHash.Switch
+                       -- TeleHash.Utils
+                       -- TeleHash.Crypto1a
+                       -- TeleHash.Packet
+                       TeleHash.New.Chan
+                       TeleHash.New.Crypt
+                       TeleHash.New.Hn
+                       TeleHash.New.Switch
+                       TeleHash.New.Types
+                       TeleHash.New.Utils
+
   --ghc-options:         -Wall
   ghc-options:         -Wall -fhpc
 
