--- a/htelehash.cabal
+++ b/htelehash.cabal
@@ -70,8 +70,11 @@ Library
                        -- TeleHash.Crypto1a
                        -- TeleHash.Packet
                        TeleHash.New.Chan
+                       TeleHash.New.Convert
                        TeleHash.New.Crypt
                        TeleHash.New.Hn
+                       TeleHash.New.Packet
+                       TeleHash.New.Path
                        TeleHash.New.Switch
                        TeleHash.New.Types
                        TeleHash.New.Utils
