--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 /src/TeleHash/Crypto1a_flymake.hs
 /src/TeleHash/Packet.hs.2014-04-06T11:44:07+0200
 /src/TeleHash/Packet.hs.2014-04-06T11:45:05+0200
+/data/seeds.json.local
+/data/seeds.json.official
