--- a/htelehash.cabal
+++ b/htelehash.cabal
@@ -69,6 +69,9 @@ Library
                        TeleHash.Network.Convert
                        TeleHash.Network.Crypt
                        TeleHash.Network.Crypto1a
+                       TeleHash.Network.Ext.Connect
+                       TeleHash.Network.Ext.Link
+                       TeleHash.Network.Ext.Path
                        TeleHash.Network.Hn
                        TeleHash.Network.Packet
                        TeleHash.Network.Path
