--- a/htelehash.cabal
+++ b/htelehash.cabal
@@ -63,28 +63,28 @@ Library
                    , vector
                    -- , mvc
                    , murmurhash3
-                   , stm
+
   hs-source-dirs: src
   Buildable: False
   Exposed-modules:
-                       TeleHash.Network.Bucket
-                       TeleHash.Network.Convert
-                       TeleHash.Network.Crypt
-                       TeleHash.Network.Crypto1a
-                       TeleHash.Network.Ext.Chat
-                       TeleHash.Network.Ext.Connect
-                       TeleHash.Network.Ext.Link
-                       TeleHash.Network.Ext.Seek
-                       TeleHash.Network.Ext.Thtp
-                       TeleHash.Network.Ext.Path
-                       TeleHash.Network.Hn
-                       TeleHash.Network.Packet
-                       TeleHash.Network.Path
-                       TeleHash.Network.Paths
-                       TeleHash.Network.Switch
-                       TeleHash.Network.SwitchApi
-                       TeleHash.Network.Types
-                       TeleHash.Network.Utils
+                       Network.TeleHash.Bucket
+                       Network.TeleHash.Convert
+                       Network.TeleHash.Crypt
+                       Network.TeleHash.Crypto1a
+                       Network.TeleHash.Ext.Chat
+                       Network.TeleHash.Ext.Connect
+                       Network.TeleHash.Ext.Link
+                       Network.TeleHash.Ext.Path
+                       Network.TeleHash.Ext.Seek
+                       Network.TeleHash.Ext.Thtp
+                       Network.TeleHash.Hn
+                       Network.TeleHash.Packet
+                       Network.TeleHash.Path
+                       Network.TeleHash.Paths
+                       Network.TeleHash.Switch
+                       Network.TeleHash.SwitchApi
+                       Network.TeleHash.Types
+                       Network.TeleHash.Utils
 
   --ghc-options:         -Wall
   ghc-options:         -Wall -fhpc
