--- a/htelehash.cabal
+++ b/htelehash.cabal
@@ -16,12 +16,8 @@ Extra-source-files:  README
                      .ghci
                      -- buildall.sh
 
-Cabal-version:   >= 1.6
+Cabal-version:   >= 1.10
 
-
-flag buildtests
-  description: Build the executable to run unit tests
-  default: False
 
 Library
   Build-depends:     base             >= 4       && < 5
@@ -64,7 +60,7 @@ Library
                    -- , mvc
                    , split
   hs-source-dirs: src
-  Buildable: False
+  -- Buildable: False
   Exposed-modules:
                        Network.TeleHash.Bucket
                        Network.TeleHash.Convert
@@ -86,6 +82,7 @@ Library
                        Network.TeleHash.Types
                        Network.TeleHash.Utils
 
+  default-language: Haskell2010
   --ghc-options:         -Wall
   ghc-options:         -Wall -fhpc
 
@@ -93,17 +90,32 @@ Library
 executable             ping
     hs-source-dirs:    . src
     main-is:           pingNew.hs
+    default-language: Haskell2010
     ghc-options:  -Wall
 
 executable             seed
     hs-source-dirs:    . src
     main-is:           seed.hs
+    default-language: Haskell2010
     ghc-options:  -Wall
 
 executable             tft
     hs-source-dirs:    . src
     main-is:           tft.hs
+    default-language: Haskell2010
     ghc-options:  -Wall
+
+
+test-suite doctests
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   test
+  ghc-options:      -threaded -Wall
+  main-is:          doctests.hs
+  build-depends:    base
+                  , doctest >= 0.9.3
+                  , ghc-mod >= 4.1
+
 
 
 -- test-suite             runtests
