More work on meshing

--- a/htelehash.cabal
+++ b/htelehash.cabal
@@ -61,6 +61,7 @@ Library
                        Network.TeleHash.Packet
                        Network.TeleHash.Path
                        Network.TeleHash.Paths
+                       Network.TeleHash.Periodic
                        Network.TeleHash.Switch
                        Network.TeleHash.SwitchApi
                        Network.TeleHash.Types
