More work on meshing. Getting more reliable.

--- a/htelehash.cabal
+++ b/htelehash.cabal
@@ -125,6 +125,7 @@ executable             tft
                   , split
                   , text
                   , unordered-containers
+                  , ekg
 
 
 executable             ping
