--- a/htelehash.cabal
+++ b/htelehash.cabal
@@ -41,6 +41,7 @@ Library
                   , old-locale
                   , split
                   , text
+                  , transformers < 0.4
                   , unordered-containers
 
   hs-source-dirs: src
