Snapshot WIP on v2 before starting v3

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: haskell
 
-env:
- - GHCVER=7.4.2
- - GHCVER=7.6.3
- - GHCVER=7.8.2
+# env:
+#  - GHCVER=7.4.2
+#  - GHCVER=7.6.3
+#  - GHCVER=7.8.2
+
+ghc:
+  - 7.4
+  - 7.6
+  - 7.8
 
